# Ani3D/src

if (ANI3D_USE_CGM_OCC)
    add_subdirectory(cgm)
endif (ANI3D_USE_CGM_OCC)
add_subdirectory(iluk)
if (NOT BLAS_FOUND)
    add_subdirectory(blas)
endif (NOT BLAS_FOUND)
if (NOT LAPACK_FOUND)
    add_subdirectory(lapack)
endif (NOT LAPACK_FOUND)
if (ANI3D_USE_AFT)
    add_subdirectory(aniAFT)
endif (ANI3D_USE_AFT)
if (ANI3D_USE_ILU)
    add_subdirectory(aniILU)
endif (ANI3D_USE_ILU)
if (ANI3D_USE_INB)
    add_subdirectory(aniINB)
endif (ANI3D_USE_INB)
if (ANI3D_USE_FEM)
    add_subdirectory(aniFEM)
endif (ANI3D_USE_FEM)
if (ANI3D_USE_MBA)
    add_subdirectory(aniMBA)
endif (ANI3D_USE_MBA)
if (ANI3D_USE_LMR)
    add_subdirectory(aniLMR)
endif (ANI3D_USE_LMR)
if (ANI3D_USE_VIEW)
    add_subdirectory(aniVIEW)
endif (ANI3D_USE_VIEW)
if (ANI3D_USE_RCB)
    add_subdirectory(aniRCB)
endif (ANI3D_USE_RCB)
if (ANI3D_BUILD_TUTORIALS)
    add_subdirectory(Tutorials)
endif (ANI3D_BUILD_TUTORIALS)

if (ANI3D_BUILD_BIOIMPEDANCE)
    add_subdirectory(BI)
endif (ANI3D_BUILD_BIOIMPEDANCE)
