# Ani3D/src/Tutorials

if (ANI3D_USE_AFT)
  add_subdirectory(PackageAFT)
endif (ANI3D_USE_AFT)
if (ANI3D_USE_ILU)
  add_subdirectory(PackageILU)
endif (ANI3D_USE_ILU)
if (ANI3D_USE_INB AND ANI3D_USE_ILU)
  add_subdirectory(PackageINB)
endif (ANI3D_USE_INB AND ANI3D_USE_ILU)
if (ANI3D_USE_FEM AND ANI3D_USE_MBA)
  add_subdirectory(PackageFEM)
endif (ANI3D_USE_FEM AND ANI3D_USE_MBA)
if (ANI3D_USE_MBA AND ANI3D_USE_LMR)
  add_subdirectory(PackageMBA)
endif (ANI3D_USE_MBA AND ANI3D_USE_LMR)
if (ANI3D_USE_LMR AND ANI3D_USE_MBA AND ANI3D_USE_FEM)
  add_subdirectory(PackageLMR)
endif (ANI3D_USE_LMR AND ANI3D_USE_MBA AND ANI3D_USE_FEM)
if (ANI3D_USE_VIEW AND ANI3D_USE_MBA)
  add_subdirectory(PackageVIEW)
endif (ANI3D_USE_VIEW AND ANI3D_USE_MBA)
if (ANI3D_USE_RCB AND ANI3D_USE_MBA AND ANI3D_USE_VIEW)
  add_subdirectory(PackageRCB)
endif (ANI3D_USE_RCB AND ANI3D_USE_MBA AND ANI3D_USE_VIEW)

